add sqlite3 support
